--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-nfPJJj5CgOXc7uI3xSnb+PXed8XVwD1RGX7dN35ceLopW+q0N9NAfkWoZIpd7nFT7LlYKrGAg6hlV/J4eZGuJA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vite App</title>
   </head>
   <body>
