--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/logo.png">
+  <link rel="icon" type="image/x-icon" href="/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rainbow Voyage</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
