added pwa files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Rainbow Voyage</title>
+
+    <meta name="description" content="Rainbow Voyage description" />
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+    <link rel="icon" href="/icons/favicon-32x32.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="/icons/favicon-16x16.png" type="image/png" sizes="16x16" />
+    <link rel="icon" href="/icons/pwa-192x192.png" type="image/png" sizes="192x192" />
+    <link rel="icon" href="/icons/pwa-512x512.png" type="image/png" sizes="512x512" />
+    <link rel="mask-icon" href="/icons/pwa-maskable-192x192.png" color="#FFFFFF" />
+    <link rel="mask-icon" href="/icons/pwa-maskable-512x512.png" color="#FFFFFF" />
+
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
